app/webroot/css/main.less
@import "lib";
@import "basic";

@gridWidth : 150px;
@gridHeight : 30px;
@gridVPadding : 10px;
@gridHPadding : 10px;
@gridPadding : 10px;
@folderHeight : 4*@gridHeight + 3*@gridPadding;
#color-theme{
  position: absolute;
  right:10px;
  bottom:10px;
  z-index:2;

  li{
    display: block;
    width:40px;
    height:40px;
    float:left;
    margin-right:5px;
  }
}

#desktop-view{
  width:100%;
  min-height: 100%;
  position:absolute;
  background: url(../img/bg-blur-1.jpg);  
  overflow-x:hidden;
  overflow-y: auto;
  z-index: 1;
}

#bg-dot{
  display: none;
  width:100%;
  height:100%;
  position:fixed;
  background: url(../img/dot-1.png) left top repeat;
  .alpha(0.2);
  z-index: 1;
}

#msg-box{
  @w : 300px;
  @h : 100px;
  @size : 10px;

  display: none;
  width:@w;
  height:@h;
  position: absolute;
  background:white;
  top : @size;
  left : ~'calc(50% - @{w}/2)';
  z-index:2;
  .shadow;
  
  p.msg-body{
    text-align: center;
    line-height: @h;
    font-size:20px;
  }

  div.arrow-up{
    width: 0; 
    height: 0; 
    border-left: @size solid transparent;
    border-right: @size solid transparent;
    
    border-bottom: @size solid white;
    position: absolute;
    top:-@size+1px;
    left : calc((@w - @size)/2);
  }

}

h1.links-left{
  display: block;
  position: absolute;
  right:30px;
  top:30px;
  font-size:30px;
  color:white;
  span{
    color:white;
    font-size:16px;
  }
}

#folder-drop-preview, #link-drop-preview{
  position : absolute;
  background: black;
  .alpha(0.3);
  z-index: 1;
}

#topbar{
  height: 50px;
  width:100%;
  background: #222222;
  position: fixed;
  left:0;
  top:0;
  .alpha(0.5);
  z-index:2;
  div.funcs{
    height:100%;
    position:absolute;
    right:17px;
    top:17px;
    .add25{
      fill : #ffffff;
    }
  }
}
#gridWrap{

}
#grid{
  width:100%;
  height:100%;
  display:block;
  position:absolute;
  li{
    display: block;
    position:absolute;
    z-index: 2;
    .alpha(0.21);
    margin:0;
    padding:0;
    pointer-events:none;
    &.hline{
      width: 100%;
      height:@gridHeight;
      left : 0;
      border-top : 1px solid red;
      border-bottom : 1px solid red;
    }
    &.vline{
      width : @gridWidth;
      height : 100%;
      top : 0;
      border-left : 1px solid red;
      border-right : 1px solid red;
    }
    &.over{
      background:blue;
    }
  }
}

.folder{
  @size : 4*@gridHeight + 3*@gridVPadding;
  position:absolute;
  width : 150px;
  height : @size;
  background: @c1 url(../img/icons-3/SVG/folder12.svg) center 10px no-repeat;
  background-size:@size*0.7;
  z-index:2;
  .alpha(0.85);
  cursor : pointer;
  
  &.youtube{
    background: @c2 url(../img/icons-3/SVG/movie3.svg) center 10px no-repeat;
    background-size:@size*0.7;

    // &:after{
    //   position:absolute;
    //   width:16px;
    //   height:16px;
    //   background: url(http://www.youtube.com/favicon.ico) left top no-repeat;
    //   content : "";
    //   right : 10px;
    //   top : 10px;
    // }
  }
  .name{
    position: relative;
    top:@size - 30px;
    font-size:10px;
    text-align: center;
    line-height:20px;
    padding:0 10px 0 10px;
    width:150px - 10px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

.external{
  padding-right:22px;
  background:url(../img/icon-external-link.gif) right center no-repeat;
  background-size: 18px 12px;
}

.link{
  @h :30px;
  @w : 310px;
  @grey : #c7c7c7;
  @grey-dark : #999;
  
  position:absolute;
  height:@h;
  width: @w;
  border:0;
  -webkit-border-radius: 3px 3px 0 0;
  border-radius: 3px;
  .shadow;
  background:white;
  z-index:2;
  cursor:pointer;

  .state-paste-url{
    display: none;
    input{
      width:300px;
      border:0;
      line-height: 30px;
    }
  }
  .state-ready{
    .link-body{
      .icon{
        height:@h;
        width:35px;
        overflow: hidden;
        img{
          position:absolute;
        }
      }
      a.title{
        color:#333;
        text-decoration:none;
        font-size:12px;
        line-height:@h;
        position:absolute;
        left:35px;
        top:0;
        width:@w - 35px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }
  .link-details{
    @size : 10px;
    @w1 : 400px;
    @h1 : 300px;
    position: absolute;
    top: @h;
    left : (@w - @w1) / 2;
    width:@w1;
    //height:@h1;
    
    @size1 : calc((@w1 - 400px)/2);
    .page{
      background: white;
      position: relative;
      top:10px;
      .shadow;

      &.page-1{
          img.thumb{
          width:@w1;
          margin-top:0;
          margin-left:0;
        }
        
        .texts{
          margin-left:@size1;
          margin-bottom:@size1;
          padding:20px;
          padding-top:5px;
          h1{
            padding-top:5px;
            font-size:13px;
            color:@c1;
            p{
              padding-top:5px;
            }
            a.from{
              color:#888;
              font-size:12px; 
            }
          }
          p.desc{
            padding-top:15px;
            padding-bottom:25px;
            line-height: 19px;
            color:#444;
          }
          div.more{
            position:absolute;
            right:15px;
            bottom:15px;
            div.arrow-right{
              width: 0; 
              height: 0; 
              border-top: 5px solid transparent;
              border-bottom: 5px solid transparent;
              border-left: 5px solid black;
              position:absolute;
              right:4px;
              top:1px;
            }
            a{
              padding-right:15px;
            }
          }
        }
      }
      &.page-2{

      }
    }

    .arrow-up{
        width: 0; 
        height: 0; 
        border-left: @size solid transparent;
        border-right: @size solid transparent;
        
        border-bottom: @size solid white;
        position: absolute;
        top:0;
        left : calc((@w1 - @size)/2);
    }
    .arrow-down{
        display: none;
        width: 0; 
        height: 0; 
        border-left: 20px solid transparent;
        border-right: 20px solid transparent;
        
        border-top: 20px solid #f00;
    }
  }
}

//import theme and allow overwrite
@import "theme-mokseto";

